<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItems"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp" android:layout_marginStart="12dp"
            app:layout_constraintBottom_toTopOf="@+id/tvId"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvId"
            android:textSize="24sp"
            android:hint="Id" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/idAddButton"
            app:layout_constraintHorizontal_bias="0.0"/>
    <!-- I added the remaining UI elements -->
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idClearDbButton"
            android:text="@string/idClearDbButton" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginBottom="244dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idDeleteFromDbButton"
            android:text="@string/idDeleteFromDbButton" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginBottom="196dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idDisplayDbButton"
            android:text="@string/idDisplayDbButton" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginBottom="292dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idAddButton"
            android:text="Add" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="52dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idDeleteButton"
            android:text="Delete" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idWriteDbButton"
            android:text="@string/idWriteDbButton" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="96dp"
            android:layout_marginBottom="148dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idReadDbButton"
            android:text="@string/idReadDbButton" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginBottom="148dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idClearSessionButton"
            android:text="@string/idClearSessionButton" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginBottom="100dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>